# school_schedule

./: .env  Cargo.toml  Dockerfile  diesel.toml
.github/workflows/: docker-image.yml
migrations/2025-05-11-105229_create_tables/: down.sql  up.sql
migrations/2025-05-14-204236_create_documents_table/: up.sql
migrations/2025-05-20-183429_create_attendance_table/: up.sql
migrations/2025-06-02-205727_create_permissions/: down.sql  up.sql
migrations/2025-06-02-210242_create_users/: up.sql
migrations/2025-06-07-222604_add_full_name_to_users/: down.sql  up.sql
migrations/2025-06-07-225235_set_default_role_for_users/: down.sql  up.sql
src/: db.rs  error.rs  lib.rs  main.rs  schema.rs
src/auth/: backend.rs  mod.rs  permissions.rs
src/handlers/: attendances_handler.rs  auth_handler.rs  lesson.rs  lesson_handler.rs  mod.rs  parent.rs  parent_handler.rs  student.rs  student_group_handler.rs  student_handler.rs  teacher.rs  teacher_handler.rs  user_handler.rs
src/handlers/utils/: mod.rs  paginated_response.rs
src/logic/: mod.rs
src/logic/repositories/: attendance_repository.rs  document_repository.rs  lesson.rs  lesson_repository.rs  mod.rs  parent_repository.rs  student.rs  student_group_repository.rs  student_repository.rs  teacher.rs  teacher_repository.rs  user_repository.rs
src/logic/services/: attendance_service.rs  document_service.rs  lesson.rs  lesson_service.rs  mod.rs  parent.rs  parent_service.rs  student.rs  student_group_service.rs  student_service.rs  teacher.rs  teacher_service.rs  user_service.rs
src/models/: attendance.rs  document.rs  lesson.rs  mod.rs  parent.rs  student.rs  student_group.rs  teacher.rs  user.rs
